# tsfile-oxide

./: CLAUDE.md  Cargo.toml  README.cpp-summary.md  README.roadmap.md
benches/: compression.rs  encoding.rs  read_write.rs
examples/: inspect.rs  make_sample.rs
proptest-regressions/compress/: compressor.txt
src/: bitmap.rs  config.rs  device_id.rs  error.rs  lib.rs  path.rs  record.rs  schema.rs  serialize.rs  statistic.rs  tablet.rs  tsfile_format.rs  types.rs  value.rs
src/compress/: compressor.rs  mod.rs
src/encoding/: bit_packer.rs  decoder.rs  dictionary.rs  encoder.rs  gorilla.rs  mod.rs  plain.rs  rle.rs  sprintz.rs  ts2diff.rs  zigzag.rs
src/io/: bloom_filter.rs  io_reader.rs  io_writer.rs  mod.rs  read_file.rs  write_file.rs
src/reader/: chunk_reader.rs  metadata_querier.rs  mod.rs  result_set.rs  row_record.rs  scan_iterator.rs  test_fixtures.rs  tsblock.rs  tsfile_reader.rs
src/reader/block/: mod.rs  single_device.rs
src/reader/filter/: logical.rs  mod.rs  time.rs  value.rs
src/writer/: chunk_writer.rs  mod.rs  page_writer.rs  table_writer.rs  time_chunk_writer.rs  time_page_writer.rs  tsfile_writer.rs  value_chunk_writer.rs  value_page_writer.rs
